--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,6 +131,20 @@ jobs:
         with:
           go-version: '1.25'
 
+      - name: Set Environment Variables
+        run: |
+          if [ -n "${{ github.event.inputs.version }}" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+          elif [[ "${GITHUB_REF}" == refs/tags/v* ]]; then
+            VERSION="${GITHUB_REF#refs/tags/v}"
+          fi
+          if [ -z "${VERSION}" ]; then
+            VERSION="0.1.0"
+          fi
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          BUILDTIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          echo "BUILDTIME=${BUILDTIME}" >> $GITHUB_ENV
+
       - name: Install Linux dependencies for CGO
         if: matrix.goos == 'linux' && matrix.cgo == true
         run: |
@@ -154,11 +168,13 @@ jobs:
             CGO_CFLAGS="$(pkg-config --cflags liblzma)" \
             CGO_LDFLAGS="$(pkg-config --libs --static liblzma)" \
             go build -a \
-              -ldflags='-linkmode external -extldflags "-static" -s -w' \
+              -ldflags="-linkmode external -extldflags '-static' -s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
               -o bin/${{ matrix.output }} \
               ./cmd/payload-dumper
           else
-            go build -o bin/${{ matrix.output }} ./cmd/payload-dumper
+            go build \
+              -ldflags="-s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
+              -o bin/${{ matrix.output }} ./cmd/payload-dumper
           fi
 
       - name: Build CGO version (Darwin)
@@ -174,16 +190,22 @@ jobs:
             if [[ "${{ matrix.os }}" == "macos-latest" ]]; then
               CGO_CFLAGS="-I/opt/homebrew/opt/xz/include" \
               CGO_LDFLAGS="/opt/homebrew/opt/xz/lib/liblzma.a" \
-              go build -a -ldflags="-s -w" -o bin/${{ matrix.output }} ./cmd/payload-dumper
+              go build \
+                -a -ldflags="-s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
+                -o bin/${{ matrix.output }} ./cmd/payload-dumper
             else 
               CGO_CFLAGS="-I/usr/local/opt/xz/include" \
               CGO_LDFLAGS="/usr/local/opt/xz/lib/liblzma.a" \
-              go build -a -ldflags="-s -w" -o bin/${{ matrix.output }} ./cmd/payload-dumper
+              go build \
+                -a -ldflags="-s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
+                -o bin/${{ matrix.output }} ./cmd/payload-dumper
             fi
           else
             CGO_CFLAGS="-I/opt/homebrew/opt/xz/include" \
             CGO_LDFLAGS="-L/opt/homebrew/opt/xz/lib" \
-            go build -o bin/${{ matrix.output }} ./cmd/payload-dumper
+            go build \
+              -ldflags="-s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
+              -o bin/${{ matrix.output }} ./cmd/payload-dumper
           fi
 
       - name: Build Pure Go version
@@ -196,9 +218,13 @@ jobs:
         shell: bash
         run: |
           if [[ "${{ matrix.goos }}" == "windows" ]]; then
-            go build -o bin/${{ matrix.output }}.exe ./cmd/payload-dumper
+            go build \
+              -ldflags="-s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
+              -o bin/${{ matrix.output }}.exe ./cmd/payload-dumper
           else
-            go build -o bin/${{ matrix.output }} ./cmd/payload-dumper
+            go build \
+              -ldflags="-s -w -X 'github.com/xishang0128/payload-dumper-go/constant.Version=${VERSION}' -X 'github.com/xishang0128/payload-dumper-go/constant.BuildTime=${BUILDTIME}'" \
+              -o bin/${{ matrix.output }} ./cmd/payload-dumper
           fi
 
       - name: Create archive (Windows)
@@ -223,6 +249,28 @@ jobs:
             bin/*.zip
             bin/*.tar.gz
           retention-days: 30
+
+  release:
+    needs: [build]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: bin/
+          merge-multiple: true
+
+      - name: Create Release
+        if: success()
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          files: |
+            bin/*.zip
+            bin/*.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   pre-release:
     needs: [build]
